--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>masterji-clone-in-react</title>
+    <link rel="shortcut icon" href="/src/assets/favicon.io.jpeg" type="image/x-icon">
+    <title>MasterJi by Dasrat</title>
   </head>
   <body>
     <div id="root"></div>
